# liblxqt

./: AUTHORS  CHANGELOG  CMakeLists.txt  COPYING  README.md  liblxqt.doxygen  liblxqt.ts  liblxqt_ar.ts  liblxqt_ca.ts  liblxqt_cs.ts  liblxqt_cs_CZ.ts  liblxqt_da.ts  liblxqt_da_DK.ts  liblxqt_de.ts  liblxqt_el.ts  liblxqt_eo.ts  liblxqt_es.ts  liblxqt_es_VE.ts  liblxqt_eu.ts  liblxqt_fi.ts  liblxqt_fr.ts  liblxqt_fr_FR.ts  liblxqt_hu.ts  liblxqt_ia.ts  liblxqt_id.ts  liblxqt_id_ID.ts  liblxqt_it.ts  liblxqt_ja.ts  liblxqt_ko.ts  liblxqt_lt.ts  liblxqt_lv.ts  liblxqt_nl.ts  liblxqt_pl.ts  liblxqt_pl_PL.ts  liblxqt_pt.ts  liblxqt_pt_BR.ts  liblxqt_ro_RO.ts  liblxqt_ru.ts  liblxqt_sk_SK.ts  liblxqt_sl.ts  (+56 more)
.tx/: config  updateSrc.sh
aboutdialog/: lxqtaboutdialog.cpp  lxqtaboutdialog.h  lxqtaboutdialog.ui  lxqtaboutdialog_p.h  razoraboutdlg.cpp  technicalinfo.cpp  technicalinfo.h
addplugindialog/: addplugindialog.cpp  addplugindialog.h  lxqtaddplugindialog.cpp  lxqtaddplugindialog.h  lxqtaddplugindialog.ui
cmake/: lxqt-config.cmake.in  lxqtX-config.cmake.in
cmake/modules/: LXQtTranslateDesktop.cmake  LXQtTranslateTs.cmake
configdialog/: configdialog.cpp  configdialog.h  configdialog.ui  lxqtconfigdialog.cpp  lxqtconfigdialog.h  lxqtconfigdialog.ui  lxqtconfigdialog_p.h  lxqtconfigdialogcmdlineoptions.cpp  lxqtpageselectwidget.cpp  lxqtpageselectwidget.h  pageselectwidget.cpp  pageselectwidget.h
lxqtbacklight/: virtual_backend.cpp  virtual_backend.h
lxqtbacklight/linux_backend/: linuxbackend.cpp  linuxbackend.h
lxqtbacklight/linux_backend/driver/: CMakeLists.txt  libbacklight_backend.c  libbacklight_backend.h  lxqtbacklight_backend.c
lxqtleave/: CMakeLists.txt  main.cpp
lxqtleave/resources/: lxqt-hibernate.desktop.in  lxqt-lockscreen.desktop.in  lxqt-logout.desktop.in  lxqt-reboot.desktop.in  lxqt-shutdown.desktop.in  lxqt-suspend.desktop.in
lxqtleave/translations/: lxqt-hibernate_de.desktop  lxqt-hibernate_pt.desktop  lxqt-lockscreen_de.desktop  lxqt-lockscreen_pt.desktop  lxqt-logout_de.desktop  lxqt-logout_pt.desktop  lxqt-reboot_de.desktop  lxqt-reboot_pt.desktop  lxqt-shutdown_de.desktop  lxqt-shutdown_pt.desktop  lxqt-suspend_de.desktop  lxqt-suspend_pt.desktop
lxqtpower/: lxqtpower.cpp  lxqtpower.h  lxqtpowerproviders.cpp  lxqtpowerproviders.h
razorpower/: razorpowerproviders.cpp  razorpowerproviders.h
resources/: power.conf
translations/: CMakeLists.txt  liblxqt.ts  liblxqt.ts.src  liblxqt_ar.ts  liblxqt_arn.ts  liblxqt_ast.ts  liblxqt_bg.ts  liblxqt_ca.ts  liblxqt_cs.ts  liblxqt_cs_CZ.ts  liblxqt_cy.ts  liblxqt_da.ts  liblxqt_da_DK.ts  liblxqt_de.ts  liblxqt_de_DE.ts  liblxqt_el.ts  liblxqt_el_GR.ts  liblxqt_en_GB.ts  liblxqt_eo.ts  liblxqt_es.ts  liblxqt_es_VE.ts  liblxqt_et.ts  liblxqt_eu.ts  liblxqt_fi.ts  liblxqt_fr.ts  liblxqt_fr_FR.ts  liblxqt_gl.ts  liblxqt_he.ts  liblxqt_hi.ts  liblxqt_hr.ts  liblxqt_hu.ts  liblxqt_ia.ts  liblxqt_id.ts  liblxqt_id_ID.ts  liblxqt_is.ts  liblxqt_it.ts  liblxqt_it_IT.ts  liblxqt_ja.ts  liblxqt_ka.ts  liblxqt_kab.ts  (+30 more)
translatorsinfo/: CMakeLists.txt  translators_ja.info  translators_ru.info  translatorsinfo.cpp  translatorsinfo.h
